--- a/lecture_03/lecture_3.ipynb
+++ b/lecture_03/lecture_3.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
        "3.141592653589793"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -201,6 +201,9 @@
    ],
    "source": [
     "# Write your own code\n",
+    "x = 5\n",
+    "print(np.pi*(x**2))\n",
+    "print((1/(np.sqrt(2*np.pi)))*(np.exp(-x**2)))\n",
     "\n",
     "\n",
     "\n"
@@ -973,7 +976,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.12.7"
   },
   "orig_nbformat": 4,
   "vscode": {
