--- a/Quiz2/Quiz2/Quiz 2.ipynb
+++ b/Quiz2/Quiz2/Quiz 2.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
        "1229"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -271,9 +271,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        Top Performer\n",
+       "1        Top Performer\n",
+       "2        Top Performer\n",
+       "3        Top Performer\n",
+       "4        Top Performer\n",
+       "             ...      \n",
+       "18534    Top Performer\n",
+       "18535    Top Performer\n",
+       "18536    Top Performer\n",
+       "18537    Top Performer\n",
+       "18538    Top Performer\n",
+       "Name: player_classification, Length: 18539, dtype: object"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Write your own code\n",
     "def totalstats(TotalStats):\n",
@@ -308,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
