--- a/assignment5/assignment5/assignment5.ipynb
+++ b/assignment5/assignment5/assignment5.ipynb
@@ -27,11 +27,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Derry Li\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your answer\n"
+    "# Write your answer\n",
+    "print(\"Derry Li\")"
    ]
   },
   {
@@ -46,11 +55,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write your answer\n"
+    "# Write your answer\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -68,11 +78,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write your answer\n"
+    "# Write your answer\n",
+    "import os as os"
    ]
   },
   {
@@ -100,11 +111,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write your answer\n"
+    "# Write your answer\n",
+    "dataset_name  = \"march_flights.csv\"\n",
+    "old_directory = \"flight_data/\"\n",
+    "new_directory = \"clean_data/\"\n",
+    "old_path  = old_directory +  dataset_name\n",
+    "new_path  = new_directory +  dataset_name\n",
+    "df = pd.read_csv(old_path)\n",
+    "df.to_csv(new_path)"
    ]
   },
   {
@@ -129,11 +147,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\derry\\OneDrive\\Documents\\GitHub\\assignment5\\assignment5\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your answer\n"
+    "# Write your answer\n",
+    "current_directory = os.getcwd()\n",
+    "print(current_directory)"
    ]
   },
   {
@@ -170,11 +198,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "april_flights.csv does not begin with m\n",
+      "['march_flights.csv', 'may_flights.csv']\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your answer\n"
+    "# Write your answer\n",
+    "list_filenames = os.listdir(\"flight_data\")\n",
+    "list_csv_files = []\n",
+    "for i in list_filenames:\n",
+    "    if i[0] == \"m\":\n",
+    "        list_csv_files.append(i)\n",
+    "    else:\n",
+    "        print(str(i) + \" does not begin with m\")\n",
+    "print(list_csv_files)"
    ]
   },
   {
@@ -199,11 +244,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10.0\n",
+      "25.0\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your answer\n"
+    "# Write your answer\n",
+    "def f_to_c(F):\n",
+    "    return 5/9*(F-32)\n",
+    "\n",
+    "print(f_to_c(50))\n",
+    "print(f_to_c(77))"
    ]
   },
   {
@@ -225,11 +284,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50.0\n",
+      "77.0\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your answer\n"
+    "# Write your answer\n",
+    "from scripts import auxiliaryfunction as af\n",
+    "print(af.c_to_f(10))\n",
+    "print(af.c_to_f(25))\n"
    ]
   },
   {
@@ -257,7 +328,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.7"
   },
   "orig_nbformat": 4
  },
