--- a/lecture_14/lecture_14.ipynb
+++ b/lecture_14/lecture_14.ipynb
@@ -2723,330 +2723,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
-       "columns": [
-        {
-         "name": "constructorId",
-         "rawType": "int64",
-         "type": "integer"
-        },
-        {
-         "name": "mean_points",
-         "rawType": "float64",
-         "type": "float"
-        }
-       ],
-       "conversionMethod": "pd.DataFrame",
-       "ref": "17a0ac36-811d-400b-9bfe-a2189f23dda2",
-       "rows": [
-        [
-         "131",
-         "12.363642857142858"
-        ],
-        [
-         "9",
-         "9.117816091954023"
-        ],
-        [
-         "23",
-         "5.0588235294117645"
-        ],
-        [
-         "208",
-         "4.584415584415584"
-        ],
-        [
-         "6",
-         "4.317967618236046"
-        ],
-        [
-         "211",
-         "3.723684210526316"
-        ],
-        [
-         "214",
-         "3.6931818181818183"
-        ],
-        [
-         "1",
-         "3.3574549426542872"
-        ],
-        [
-         "196",
-         "3.25"
-        ],
-        [
-         "10",
-         "2.589622641509434"
-        ],
-        [
-         "108",
-         "2.588235294117647"
-        ],
-        [
-         "213",
-         "2.3278688524590163"
-        ],
-        [
-         "191",
-         "2.272727272727273"
-        ],
-        [
-         "3",
-         "2.270031545741325"
-        ],
-        [
-         "4",
-         "2.2579415501905973"
-        ],
-        [
-         "2",
-         "2.2"
-        ],
-        [
-         "22",
-         "1.6567307692307693"
-        ],
-        [
-         "187",
-         "1.6436781609195403"
-        ],
-        [
-         "107",
-         "1.6363636363636365"
-        ],
-        [
-         "180",
-         "1.6328125"
-        ],
-        [
-         "118",
-         "1.5211267605633803"
-        ],
-        [
-         "149",
-         "1.5"
-        ],
-        [
-         "117",
-         "1.3333333333333333"
-        ],
-        [
-         "170",
-         "1.2555970149253732"
-        ],
-        [
-         "150",
-         "1.25"
-        ],
-        [
-         "172",
-         "1.206008583690987"
-        ],
-        [
-         "182",
-         "1.1724137931034482"
-        ],
-        [
-         "32",
-         "1.142365097588978"
-        ],
-        [
-         "11",
-         "1.0263157894736843"
-        ],
-        [
-         "109",
-         "1.0"
-        ],
-        [
-         "59",
-         "1.0"
-        ],
-        [
-         "7",
-         "0.9946428571428572"
-        ],
-        [
-         "16",
-         "0.961864406779661"
-        ],
-        [
-         "66",
-         "0.9564056939501779"
-        ],
-        [
-         "34",
-         "0.9531722054380665"
-        ],
-        [
-         "195",
-         "0.9523809523809523"
-        ],
-        [
-         "5",
-         "0.9328358208955224"
-        ],
-        [
-         "200",
-         "0.8604651162790697"
-        ],
-        [
-         "51",
-         "0.8476658476658476"
-        ],
-        [
-         "183",
-         "0.8387096774193549"
-        ],
-        [
-         "132",
-         "0.8181818181818182"
-        ],
-        [
-         "210",
-         "0.8090277777777778"
-        ],
-        [
-         "25",
-         "0.8070374574347332"
-        ],
-        [
-         "82",
-         "0.7605633802816901"
-        ],
-        [
-         "148",
-         "0.75"
-        ],
-        [
-         "105",
-         "0.7182110091743119"
-        ],
-        [
-         "15",
-         "0.70595690747782"
-        ],
-        [
-         "110",
-         "0.6666666666666666"
-        ],
-        [
-         "27",
-         "0.6350245499181669"
-        ],
-        [
-         "167",
-         "0.6194029850746269"
-        ]
-       ],
-       "shape": {
-        "columns": 1,
-        "rows": 210
-       }
-      },
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>mean_points</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>constructorId</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>131</th>\n",
-       "      <td>12.363643</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>9.117816</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>5.058824</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>208</th>\n",
-       "      <td>4.584416</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>4.317968</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>76</th>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>77</th>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>78</th>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>130</th>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>112</th>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>210 rows × 1 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "               mean_points\n",
-       "constructorId             \n",
-       "131              12.363643\n",
-       "9                 9.117816\n",
-       "23                5.058824\n",
-       "208               4.584416\n",
-       "6                 4.317968\n",
-       "...                    ...\n",
-       "76                0.000000\n",
-       "77                0.000000\n",
-       "78                0.000000\n",
-       "130               0.000000\n",
-       "112               0.000000\n",
-       "\n",
-       "[210 rows x 1 columns]"
-      ]
-     },
-     "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'results' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Write your own code\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m sorted_data \u001b[38;5;241m=\u001b[39m (results\u001b[38;5;241m.\u001b[39mgroupby(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mconstructorId\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      4\u001b[0m                         \u001b[38;5;241m.\u001b[39magg(mean_points \u001b[38;5;241m=\u001b[39m (\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpoints\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmean\u001b[39m\u001b[38;5;124m'\u001b[39m))\n\u001b[0;32m      5\u001b[0m                         \u001b[38;5;241m.\u001b[39msort_values(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmean_points\u001b[39m\u001b[38;5;124m\"\u001b[39m,ascending \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m))\n\u001b[0;32m      7\u001b[0m sorted_data\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'results' is not defined"
+     ]
     }
    ],
    "source": [
@@ -7105,7 +6794,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.12.7"
   },
   "orig_nbformat": 4,
   "vscode": {
